# Neptune

./: .env  .gitignore  Cargo.toml  build.rs  config.sh  configs.test.toml  nepnep.toml  neptune.service  neptune.toml  print.sh
.cargo/: config.toml
clibs/: nepnep.c
proto/: nepnep.proto
src/: arguments.rs  btn_handler.rs  cmds.rs  configs.rs  device_helpers.rs  gui.rs  gui_manager.rs  main.rs  serial.rs  utils.rs
src/daemon/: configs.rs  input.rs  mod.rs  screenlock.rs  screenshots.rs
src/daemon/interactions/: grpc.rs  mod.rs  serial_port.rs
src/daemon/screenlock/: block_manager.rs  btn_handler.rs  device_helpers.rs  mod.rs  serial.rs
src/daemons/: configs.rs  daemons_config.rs  mod.rs  profile_extensions.rs  screenlock.rs
src/daemons/interactions/: mod.rs  serial_port.rs  websocket.rs
src/gui/: gui_manager.rs  mod.rs
src/gui_manager/: main.rs
src/gui_manager/clibs/: nepnep.c
src/neptune/: block_manager.rs  btn_handler.rs  configs.rs  device_helpers.rs  main.rs  prints_redirector.rs  serial.rs
telas_legais/: meson.build
telas_legais/src/: main.c  meson.build
