[package]
name = "neptune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
dotenv = "0.15.0"
evdev = "0.11.4"
figment = { version = "0.10.6", features = ["toml"] }
lazy_static = "1.4.0"
libadwaita = "0.1.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
run_script = "0.9.0"
serde = { version = "1.0.141", features = ["derive"] }
serialport = "4.2.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync"] }
walkdir = "2.3.2"
