[package]
name = "neptune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
dotenv = "0.15.0"
figment = { version = "0.10.8", features = ["toml"] }
log = "0.4.17"
notify = "5.1.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "sync"] }
walkdir = "2.3.3"
home = "0.5.4"